--- a/package.json
+++ b/package.json
@@ -1,23 +1,45 @@
 {
-  "name": "todo",
-  "version": "1.0.0",
-  "description": "a todo-app for my personal use",
-  "main": "index.js",
-  "author": "Jane Jeon",
-  "license": "Apache2",
-  "private": true,
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "connect-redis": "^3.3.3",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "mongodb": "^3.0.7",
-    "redis": "^2.8.0"
-  },
-  "engines": {
-    "node": "9.11.1"
-  },
-  "scripts": {
-    "start": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 index.js"
-  }
+	"name": "todo",
+	"version": "1.0.0",
+	"description": "a todo-app for my personal use",
+	"main": "app.js",
+	"author": "Jane Jeon",
+	"license": "Apache2",
+	"private": true,
+	"homepage": "http://jane-todo.herokuapp.com",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/JaneJeon/todo.git"
+	},
+	"dependencies": {
+		"bcrypt": "^2.0.1",
+		"body-parser": "^1.18.2",
+		"connect-redis": "^3.3.3",
+		"express": "^4.16.3",
+		"express-session": "^1.15.6",
+		"hbs": "^4.0.1",
+		"helmet": "^3.12.0",
+		"mongoose": "^5.0.15",
+		"morgan": "^1.9.0",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
+		"redis": "^2.8.0",
+		"winston": "^2.4.2"
+	},
+	"devDependencies": {
+		"mocha": "^5.1.1"
+	},
+	"prettier": {
+		"useTabs": true,
+		"tabWidth": 4,
+		"semi": false,
+		"singleQuote": true,
+		"printWidth": 100
+	},
+	"engines": {
+		"node": "9.11.1"
+	},
+	"scripts": {
+		"start": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 app.js"
+	}
 }
