--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dependencies": {
         "body-parser": "^1.18.2",
         "connect-redis": "^3.3.3",
+        "cors": "^2.8.4",
+        "debug": "^3.1.0",
         "express": "^4.16.3",
         "express-session": "^1.15.6",
         "hbs": "^4.0.1",
@@ -23,14 +25,13 @@
         "morgan": "^1.9.0",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
-        "redis": "^2.8.0",
-        "winston": "^2.4.2"
+        "redis": "^2.8.0"
     },
     "devDependencies": {
-        "mocha": "^5.1.1"
+        "mocha": "^5.1.1",
+        "supports-color": "^5.4.0"
     },
     "scripts": {
-        "preinstall": "npm i -g pm2",
         "start": "pm2 start app.js -i max --node-args='node --optimize_for_size --max_old_space_size=460 --gc_interval=100'"
     }
 }
