--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "url": "https://github.com/JaneJeon/todo.git"
     },
     "dependencies": {
+        "bcrypt": "^2.0.1",
         "body-parser": "^1.18.2",
         "connect-redis": "^3.3.3",
         "cors": "^2.8.4",
@@ -21,12 +22,14 @@
         "hbs": "^4.0.1",
         "helmet": "^3.12.0",
         "lodash": "^4.17.10",
-        "mongoose": "^5.0.15",
         "morgan": "^1.9.0",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
-        "passport-local-mongoose": "^5.0.0",
+        "pg": "^7.4.2",
+        "pg-hstore": "^2.3.2",
         "redis": "^2.8.0",
+        "sequelize": "^4.37.6",
+        "sequelize-hierarchy": "^1.3.2",
         "validator": "^9.4.1"
     },
     "devDependencies": {
