--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "passport-local": "^1.0.0",
         "pg": "^7.4.2",
         "pg-hstore": "^2.3.2",
+        "pm2": "^2.10.3",
         "redis": "^2.8.0",
         "sequelize": "^4.37.6",
         "sequelize-hierarchy": "^1.3.2",
@@ -37,7 +38,7 @@
         "supports-color": "^5.4.0"
     },
     "scripts": {
-        "start": "pm2 start app.js -i max --node-args='node --optimize_for_size --max_old_space_size=460 --gc_interval=100'",
+        "start": "pm2 start app.js",
         "test": "mocha --bail"
     }
 }
