--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
         "passport-local": "^1.0.0",
         "pg": "^7.4.2",
         "pg-hstore": "^2.3.2",
-        "pm2": "^2.10.3",
         "redis": "^2.8.0",
         "sequelize": "^4.37.6",
         "sequelize-hierarchy": "^1.3.2",
@@ -38,7 +37,7 @@
         "supports-color": "^5.4.0"
     },
     "scripts": {
-        "start": "pm2 start app.js",
+        "start": "node app.js",
         "test": "mocha --bail"
     }
 }
