--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dependencies": {
         "bcrypt": "^2.0.1",
         "body-parser": "^1.18.2",
+        "connect-flash": "^0.1.1",
         "connect-redis": "^3.3.3",
+        "cookie-parser": "^1.4.3",
         "cors": "^2.8.4",
         "debug": "^3.1.0",
         "express": "^4.16.3",
