--- a/package.json
+++ b/package.json
@@ -1,45 +1,53 @@
 {
-    "name": "todo",
-    "version": "1.0.0",
-    "description": "a todo-app for my personal use",
-    "main": "app.js",
-    "author": "Jane Jeon",
-    "license": "Apache2",
-    "private": true,
-    "homepage": "http://jane-todo.herokuapp.com",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/JaneJeon/todo.git"
-    },
-    "dependencies": {
-        "bcrypt": "^2.0.1",
-        "body-parser": "^1.18.2",
-        "connect-flash": "^0.1.1",
-        "connect-redis": "^3.3.3",
-        "cookie-parser": "^1.4.3",
-        "cors": "^2.8.4",
-        "debug": "^3.1.0",
-        "express": "^4.16.3",
-        "express-session": "^1.15.6",
-        "hbs": "^4.0.1",
-        "helmet": "^3.12.0",
-        "lodash": "^4.17.10",
-        "morgan": "^1.9.0",
-        "passport": "^0.4.0",
-        "passport-local": "^1.0.0",
-        "pg": "^7.4.2",
-        "pg-hstore": "^2.3.2",
-        "redis": "^2.8.0",
-        "sequelize": "^4.37.6",
-        "sequelize-hierarchy": "^1.3.2",
-        "validator": "^9.4.1"
-    },
-    "devDependencies": {
-        "mocha": "^5.1.1",
-        "supports-color": "^5.4.0"
-    },
-    "scripts": {
-        "start": "node app.js",
-        "test": "mocha --bail"
-    }
+	"name": "todo",
+	"version": "1.0.0",
+	"description": "a todo-app for my personal use",
+	"main": "app.js",
+	"author": "Jane Jeon",
+	"license": "Apache2",
+	"private": true,
+	"homepage": "http://jane-todo.herokuapp.com",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/JaneJeon/todo.git"
+	},
+	"dependencies": {
+		"bcrypt": "^2.0.1",
+		"body-parser": "^1.18.2",
+		"connect-flash": "^0.1.1",
+		"connect-redis": "^3.3.3",
+		"cookie-parser": "^1.4.3",
+		"cors": "^2.8.4",
+		"debug": "^3.1.0",
+		"express": "^4.16.3",
+		"express-session": "^1.15.6",
+		"hbs": "^4.0.1",
+		"helmet": "^3.12.0",
+		"lodash": "^4.17.10",
+		"morgan": "^1.9.0",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
+		"pg": "^7.4.3",
+		"redis": "^2.8.0",
+		"sequelize": "^4.37.7",
+		"sequelize-hierarchy": "^1.3.2",
+		"validator": "^10.1.0"
+	},
+	"devDependencies": {
+		"chai": "^4.1.2",
+		"mocha": "^5.1.1",
+		"supertest": "^3.0.0",
+		"supports-color": "^5.4.0"
+	},
+	"scripts": {
+		"start": "node app.js",
+		"test": "mocha --bail --exit --slow 100"
+	},
+	"prettier": {
+		"printWidth": 90,
+		"tabWidth": 4,
+		"useTabs": true,
+		"semi": false,
+		"singleQuote": true
+	}
 }
