--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
 	"devDependencies": {
 		"chai": "^4.1.2",
 		"mocha": "^5.1.1",
+		"nodemon": "^1.17.4",
+		"nyc": "^11.7.3",
+		"prettier": "^1.12.1",
 		"supertest": "^3.0.0",
 		"supports-color": "^5.4.0"
 	},
 	"scripts": {
-		"start": "node app.js",
-		"test": "mocha --bail --exit --slow 100 --check-leaks --globals Sequelize,User,Collection,Item"
+		"start": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 app.js",
+		"start-dev": "nodemon app.js",
+		"test": "nyc mocha --bail --exit --slow 100 --check-leaks --globals Sequelize,User,Collection,Item,__core-js_shared__"
 	},
 	"prettier": {
 		"printWidth": 90,
