--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"cookie-parser": "^1.4.3",
 		"cors": "^2.8.4",
 		"debug": "^3.1.0",
+		"dotenv": "^5.0.1",
 		"express": "^4.16.3",
 		"express-session": "^1.15.6",
 		"hbs": "^4.0.1",
