switched back to mongo

--- a/.env
+++ b/.env
@@ -1,21 +1,23 @@
-# Default configuration
-
 # Port number of the server
 PORT=3000
+
 # The mode in which the server boots in. Change value to production for prod
 NODE_ENV=development
+
 # Which server logs to print. For verbosity, go with *
 DEBUG=server,req:,error
+
 # The secret key to be used for cookie & session storage
 SECRET=shhh
+
 # Whether to allow cookies over HTTPS only
 SECURE=0
+
 # The redis connection URL
-REDIS_URL=redis://localhost:6379
-# A SQL database connection URL (doesn't have to be Postgres).
-# If you're on macOS and installed Postgres with homebrew,
-# the default user is your username, NOT postgres (as is provided here).
-# You might also need to create the database beforehand
-DATABASE_URL=postgres://postgres@localhost:5432/todo
+REDIS_URL=redis://localhost
+
+# MongoDB connection URL
+MONGODB_URI=mongodb://localhost/todo
+
 # Whether to use SSL for the database connection
 SSL=0
