--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"bcrypt": "^2.0.1",
 		"body-parser": "^1.18.2",
+		"chalk": "^2.4.1",
 		"connect-flash": "^0.1.1",
 		"connect-redis": "^3.3.3",
 		"cookie-parser": "^1.4.3",
@@ -25,13 +26,11 @@
 		"hbs": "^4.0.1",
 		"helmet": "^3.12.0",
 		"lodash": "^4.17.10",
+		"mongoose": "^5.1.0",
 		"morgan": "^1.9.0",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
-		"pg": "^7.4.3",
 		"redis": "^2.8.0",
-		"sequelize": "^4.37.7",
-		"sequelize-hierarchy": "^1.3.2",
 		"validator": "^10.1.0"
 	},
 	"devDependencies": {
