--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"nodemon": "^1.17.4",
 		"nyc": "^11.7.3",
 		"prettier": "^1.12.1",
+		"sinon": "^5.0.7",
 		"supertest": "^3.0.0",
 		"supports-color": "^5.4.0"
 	},
