--- a/.env
+++ b/.env
@@ -1,23 +1,30 @@
-# Port number of the server
+# Application Settings
+## Port number of the server
 PORT=3000
-
-# The mode in which the server boots in. Change value to production for prod
+## The mode in which the server boots in. Change value to production for prod
 NODE_ENV=development
-
-# Which server logs to print. For verbosity, go with *
+## Which server logs to print. For verbosity, go with *
 DEBUG=server,req:,error
-
-# The secret key to be used for cookie & session storage
+## The secret key to be used for cookie & session storage
 SECRET=shhh
-
-# Whether to allow cookies over HTTPS only
+## Whether to allow cookies over HTTPS only
 SECURE=0
-
-# The redis connection URL
+## The redis connection URL
 REDIS_URL=redis://localhost
-
-# MongoDB connection URL
+## MongoDB connection URL
 MONGODB_URI=mongodb://localhost/todo
-
-# Whether to use SSL for the database connection
+## Whether to use SSL for the database connection
 SSL=0
+
+# Test Settings
+## fake.js
+### items
+DEPTH=3
+BRANCH_FACTOR=5
+SEED=7
+
+## item.js
+### 1 to print the JSON output
+VERBOSE=0
+### number of times to run the test
+ITERS=1000
