--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"mocha": "^5.1.1",
 		"nodemon": "^1.17.4",
 		"nyc": "^11.7.3",
+		"ora": "^2.1.0",
 		"prettier": "^1.12.1",
 		"pretty-ms": "^3.1.0",
 		"sinon": "^5.0.7",
