--- a/.env
+++ b/.env
@@ -4,15 +4,17 @@ PORT=3000
 ## The mode in which the server boots in. Change value to production for prod
 NODE_ENV=development
 ## Which server logs to print. For verbosity, go with DEBUG=*
-DEBUG=server,req:,error*,♥*
+DEBUG=server,req:,error*,♥*,sequelize
 ## The secret key to be used for cookie & session storage
 SECRET=shhh
 ## Whether to allow cookies over HTTPS only
 SECURE=0
 ## The redis connection URL
 REDIS_URL=redis://localhost
-## MongoDB connection URL
-MONGODB_URI=mongodb://localhost/todo
+## SQL DB connection url - you might also need to create the database beforehand
+DATABASE_URL=postgres://localhost/todo
+# Whether to use SSL for the database connection (1 for Heroku)
+SSL=0
 
 # Application Settings
 ## Default username
