--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"url": "https://github.com/JaneJeon/todo.git"
 	},
 	"dependencies": {
+		"bcrypt": "^2.0.1",
 		"body-parser": "^1.18.2",
 		"chalk": "^2.4.1",
 		"connect-flash": "^0.1.1",
@@ -24,15 +25,14 @@
 		"express-session": "^1.15.6",
 		"hbs": "^4.0.1",
 		"helmet": "^3.12.0",
-		"knex": "^0.14.6",
 		"lodash": "^4.17.10",
 		"morgan": "^1.9.0",
-		"objection": "^1.1.10",
-		"objection-password-argon2": "^1.1.0",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
 		"pg": "^7.4.3",
 		"redis": "^2.8.0",
+		"sequelize": "^4.37.10",
+		"sequelize-hierarchy": "^1.3.2",
 		"validator": "^10.1.0"
 	},
 	"devDependencies": {
