--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-# Application Settings
+# Configuration
 ## Port number of the server
 PORT=3000
 ## The mode in which the server boots in. Change value to production for prod
 NODE_ENV=development
 ## Which server logs to print. For verbosity, go with *
-DEBUG=server,req:,error
+DEBUG=server,req:,error*
 ## The secret key to be used for cookie & session storage
 SECRET=shhh
 ## Whether to allow cookies over HTTPS only
@@ -13,8 +13,11 @@ SECURE=0
 REDIS_URL=redis://localhost
 ## MongoDB connection URL
 MONGODB_URI=mongodb://localhost/todo
-## Whether to use SSL for the database connection
-SSL=0
+
+# Application Settings
+## User
+DEFAULT_NAME=User
+SALT_ROUNDS=10
 
 # Test Settings
 ## fake.js
@@ -24,7 +27,7 @@ BRANCH_FACTOR=5
 SEED=7
 
 ## item.js
-### 1 to print the JSON output
+### Whether to print the JSON output (stdout)
 VERBOSE=0
-### number of times to run the test
+### Number of times to run the test
 ITERS=1000
