--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PORT=3000
 ## The mode in which the server boots in. Change value to production for prod
 NODE_ENV=development
 ## Which server logs to print. For verbosity, go with *
-DEBUG=server,req:,error*
+DEBUG=server,http,error*
 ## The secret key to be used for cookie & session storage
 SECRET=shhh
 ## Whether to allow cookies over HTTPS only
